--- a/css/h-index.css
+++ b/css/h-index.css
@@ -76,7 +76,7 @@ body{
     -ms-background-color:#fff;
     background-color: #fff;
 }
-/*Í·²¿*/
+/*Í·ï¿½ï¿½*/
 .h-header{
     width: 100%;
     height: 500px;
@@ -136,7 +136,7 @@ body{
     background: url(../img/h-img/clicked.png) 0 0 no-repeat;
     background-size:12px 12px;
 }
-/*ÄÚÈÝ*/
+/*ï¿½ï¿½ï¿½ï¿½*/
 .content{
     width: 1024px;
     min-height:3600px;
@@ -196,7 +196,7 @@ body{
     width: 155px;
     height: 190px;
 }
-/*µ×²¿*/
+/*ï¿½×²ï¿½*/
 .h-footer{
     width: 100%;
     height: 559px;
