--- a/css/h-index.css
+++ b/css/h-index.css
@@ -76,7 +76,7 @@ body{
     -ms-background-color:#fff;
     background-color: #fff;
 }
-/*头锟斤拷*/
+/*头部*/
 .h-header{
     width: 100%;
     height: 500px;
@@ -136,12 +136,13 @@ body{
     background: url(../img/h-img/clicked.png) 0 0 no-repeat;
     background-size:12px 12px;
 }
-/*锟斤拷锟斤拷*/
+/*内容*/
 .content{
     width: 1024px;
     min-height:3600px;
     margin: 0 auto 0;
 }
+/*第一块内容*/
 .h-cont-one{
     width: 100%;
     height: 160px;
@@ -159,9 +160,9 @@ body{
     position: relative;
 }
 .h-cont-one1:hover{
-    /*transform: translateY(-5px);*/
-    /*transition: 0.5s;*/
-    /*box-shadow: 5px 10px 10px 5px #EBEBEB;*/
+    transform: translateY(-4px);
+    transition: 0.5s;
+    box-shadow: 5px 10px 10px 5px #EBEBEB;
 }
 .h-cont-one1:nth-child(2){
     margin-left: 20px;
@@ -196,7 +197,232 @@ body{
     width: 155px;
     height: 190px;
 }
-/*锟阶诧拷*/
+
+/*第二块内容*/
+.h-cont-two{
+    width: 100%;
+    height: 795px;
+}
+.h-cont-two1{
+    padding-top: 60px;
+    padding-bottom: 30px;
+    zoom: 1;
+    overflow: hidden;
+}
+.h-cont-two1>h2{
+    float: left;
+    font-size: 30px;
+    color: #3A3A3A;
+    letter-spacing: 0px;
+}
+.h-cont-two1>a{
+    float: right;
+    font-size: 14px;
+    color: #555555;
+    margin-top: 18px;
+    padding-right: 13px;
+}
+.h-cont-two-ul{
+    width: 1020px;
+    margin-top: -20px;
+    margin-left: -20px;
+}
+.h-cont-two-li{
+    float: left;
+    width: 320px;
+    height: 312px;
+    margin-top: 20px;
+    margin-left: 20px;
+    position: relative;
+    background-color: #F8F8F8;
+    overflow: hidden;
+}
+.z-chunk{
+    overflow: hidden;
+    position: relative;
+    /*margin-top: 20px;*/
+    width: 328px;
+    height: 312px;
+    margin-right: 20px;
+    /*background-color: pink;*/
+}
+.z-chunk img{
+    position: absolute;
+    left:0;
+    top:0;
+    z-index: 0;
+    width: 328px;
+    height: 312px;
+}
+.z-mask{
+    position: absolute;
+    left:0;
+    top: 0;
+    width: 328px;
+    height: 312px;
+    z-index: 1;
+}
+.z-chunk:hover .z-mask{
+    transition: 1s;
+    background-color:rgba(0,0,0,.7) ;
+}
+
+.z-maskFont{
+    color:#fff;
+    width: 300px;
+    /*height: 312px;*/
+    z-index: 5;
+    position: absolute;
+    left:0;
+    top:0;
+    transform: translateY(270PX);
+
+    /*background-color: red;*/
+}
+.z-maskFont p,.z-delay p{
+    padding-left: 20px;
+}
+.z-maskFont p:nth-of-type(1){
+    font-size: 24px;
+    color: #FFFFFF;
+    letter-spacing: 0px;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.50);
+    margin-bottom: 8px;
+}
+.z-maskFont p:nth-of-type(2){
+    font-size: 14px;
+    color: #FFFFFF;
+    letter-spacing: 0px;
+    line-height: 20px;
+    padding-top: 5px;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.50);
+}
+.z-delay{
+    width: 300px;
+    /*height: 312px;*/
+    z-index: 5;
+    position: absolute;
+    left:0;
+    top:0;
+    transform: translateY(300PX);
+    /*background-color: red;*/
+}
+.z-delay p:nth-of-type(1){
+    /*opacity: 0;*/
+    padding-top: 30px;
+    font-size: 14px;
+    color: #ccc;
+    letter-spacing: 0px;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.50);
+    margin-bottom: 5px;
+}
+.z-delay p:nth-of-type(2) {
+    /*opacity: 0;*/
+    font-size: 14px;
+    color: #ccc;
+    letter-spacing: 0px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.50);
+}
+/*第四块内容*/
+.h-cont-three{
+    width: 100%;
+    height: 590px;
+}
+.h-cont-three1{
+    width: 100%;
+    height: 455px;
+}
+.h-cont-three1-left{
+    width: 660px;
+    height: 455px;
+    float: left;
+    /*position: relative;*/
+    overflow: hidden;
+}
+.h-cont-three1-right{
+    width: 320px;
+    height: 455px;
+    float: right;
+}
+.h-cont-three1-left>a>img{
+    width: 660px;
+    height: 455px;
+}
+.h-cont-three1-left-text{
+    position: relative;
+    display: table-cell;
+    width: 660px;
+    height: 455px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: rgba(0,0,0,.3);
+    top: -455px;
+}
+.h-cont-three1-left-text>h3{
+    font-size: 24px;
+    color: #FFFFFF;
+    letter-spacing: 0.17px;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.50);
+    margin-bottom: 10px;
+}
+.h-cont-three1-left-text>p{
+    font-size: 14px;
+    color: #FFFFFF;
+    letter-spacing: 0.23px;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.50);
+}
+.h-cont-three1-right1{
+    width: 320px;
+    height: 217px;
+    /*position: relative;*/
+    overflow: hidden;
+}
+.h-cont-three1-right1>a>img{
+    width: 320px;
+    height: 217px;
+}
+.h-cont-three1-right1 .h-cont-three1-left-text{
+    position: relative;
+    display: table-cell;
+    width: 320px;
+    height: 217px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: rgba(0,0,0,.3);
+    top: -221px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*底部*/
 .h-footer{
     width: 100%;
     height: 559px;
