高国栋 Signed-off-by: ggd124256903 <124256903@qq.com>

--- a/css/g-Raiders.css
+++ b/css/g-Raiders.css
@@ -90,6 +90,7 @@
     display: list-item;
     text-align: -webkit-match-parent;
     margin-right: 20px;
+    margin-bottom: 20px;
 }
 .g-article-lists .g-article-cell:hover {
     -webkit-box-shadow: 0 15px 30px rgba(0,0,0,0.1);
