--- a/css/h-taoxi.css
+++ b/css/h-taoxi.css
@@ -167,9 +167,7 @@ body{
     /*width: 1349px;*/
     /*height: 500px;*/
 /*}*/
-
-
-.h-main-cont-video{
+#video-mask {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .8);
@@ -177,7 +175,10 @@ body{
     top: 0;
     z-index: 2147483649;
 }
-.h-main-cont-video1{
+.hide {
+    display: none;
+}
+#video-mask .nav-bar-mini {
     width: 100%;
     position: absolute;
     left: 0;
@@ -186,7 +187,7 @@ body{
     text-align: center;
     opacity: 0;
 }
-.h-main-cont-video2{
+#video-mask .center-window {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -196,7 +197,24 @@ body{
     right: 0;
     margin: auto;
 }
-
+.video-js .vjs-tech {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+#video-mask .closeBtn {
+    right: 0px;
+    top: 0;
+    margin-right: 2%;
+    margin-top: 2%;
+    position: absolute;
+    opacity: 1;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+}
 /*µ×²¿*/
 .h-footer{
     width: 100%;
