--- a/css/case.css
+++ b/css/case.css
@@ -115,6 +115,10 @@
     letter-spacing: 0px;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.50);
     margin-bottom: 8px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
 }
 
 
@@ -171,3 +175,43 @@
 
 
 /*案例结束*/
+
+
+
+
+/*案例分页*/
+.z-images{
+    width: 660px;
+
+}
+.z-images img{
+    width: 660px;
+}
+.z-time{
+    height: 660px;
+    width: 342px;
+    background-color: gold;
+}
+.z-about{
+    height: 465px;
+    margin-top: 55px;
+}
+.z-line{
+    width: 1024px;
+    height: 10px;
+    background-image: url("../img/z-img/z-line.png");
+    background-repeat: no-repeat;
+}
+.z-aboutFont{
+    font-size: 30px;
+    padding-top: 68px;
+}
+
+
+
+
+
+
+
+
+
