--- a/css/h-about.css
+++ b/css/h-about.css
@@ -1,9 +1,8 @@
-
 body{
     width: 100%;
 }
+/*导航*/
 .h-nav{
-    /*height: 73px;*/
     width: 100%;
     /*position: relative;*/
     float: left;
@@ -15,6 +14,10 @@ body{
     height: 33px;
     z-index: 999;
     padding: 20px 0;
+    -webkit-background-color: transparent;
+    -o-background-color:transparent;
+    -moz-background-color:transparent;
+    -ms-background-color:transparent;
     background-color: transparent;
     float: left;
 }
@@ -33,6 +36,11 @@ body{
     font-size: 27px;
     color: #fff;
     font-weight: bold;
+}
+.h-nav-logo a img{
+    width: 100%;
+    height: 100%;
+    display: inline-block;
 }
 .h-nav2 ul{
     float: right;
@@ -57,169 +65,147 @@ body{
     width:100%;
     height: 2px;
     display: block;
+    -webkit-background-color: #fff;
+    -o-background-color:#fff;
+    -moz-background-color:#fff;
+    -ms-background-color:#fff;
     background-color: #fff;
 }
 .h-nav2 ul li span{
     width:0;
     height: 2px;
     display: block;
+    -webkit-background-color: #fff;
+    -o-background-color:#fff;
+    -moz-background-color:#fff;
+    -ms-background-color:#fff;
     background-color: #fff;
 }
 /*头部*/
 .h-header{
-    width: 100%;
-    height: 562px;
-    position: relative;
-    z-index: 10;
-}
-.h-header>img{
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-/*内容*/
-.h-main-cont{
-    min-height: 5010px;
-    margin: 0 auto 0;
-    width: 100%;
-    background-color: #fff;
-    z-index: 11;
-    position: relative;
-    padding-bottom: 1px;
-}
-.h-main-cont-pink{
-    width: 100%;
-    height: 944px;
-    background-color: #eee;
-    border-bottom: 1px solid #ccc;
-}
-.h-main-cont-title{
-    text-align: center;
-    padding: 80px 0 0;
-    font-size: 35px;
-    font-weight: 700;
-    color: #212121;
-    margin-bottom: 0;
-}
-.h-main-cont-more{
-    text-align: center;
-    padding: 20px 0 80px;
-    font-size: 20px;
-    font-weight: 700;
-    color: #212121;
-    letter-spacing: 5px;
-    margin-bottom: 0;
-}
-.h-main-cont-wrap{
-    width: 990px;
-    margin: 0 auto;
-    position: relative;
-    overflow: hidden;
-    height: 605px;
-    /*background-color: aqua;*/
-}
-.h-main-cont-img1{
-    transform: translateX(-200px);
-    opacity: .3;
-}
-.h-main-cont-img2{
-    position: absolute;
-    bottom: 130px;
-    right: 0;
-    transform: translateX(200px);
-    opacity: .3;
-}
-.h-main-cont-pink-video{
-    width: 320px;
-    height: 200px;
-    background:url("../img/h-img/h-bac28.jpg") no-repeat;
-    opacity: 0.3;
-}
-.h-main-cont-pink-video1{
-    width: 320px;
-    height: 200px;
-    opacity: 0.5;
-    background:#000 url("../img/h-img/h-bac33.png") no-repeat center center;
-}
-.h-main-cont-pink-text{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-}
-.h-main-cont-pink-text p:nth-child(1){
-    width: 450px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-}
-.h-main-cont-pink-text p:nth-child(2){
-    width: 90px!important;
-    margin-bottom: 0;
-    padding: 5px 0;
-    border: 1px solid #337ab7;
-    text-align: center;
-}
-.h-main-cont-pink-text p:nth-child(2)>a{
-    font-size: 16px;
-    color: #337ab7;
-}
-/*.h-main-cont-pink-video1{*/
     /*width: 1349px;*/
-    /*height: 500px;*/
-/*}*/
-#video-mask {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .8);
-    position: fixed;
-    top: 0;
-    z-index: 2147483649;
+    /*height: 586px;*/
 }
-.hide {
-    display: none;
-}
-#video-mask .nav-bar-mini {
-    width: 100%;
-    position: absolute;
-    left: 0;
-    z-index: 11;
-    height: 20px;
-    text-align: center;
-    opacity: 0;
-}
-#video-mask .center-window {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
+.h-about-top{
+    padding: 0;
     bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+    margin: 0;
+    height: calc(100vh - 52px);
+    position: relative;
+    background-repeat: no-repeat !important;
+    background-size: 100% 100% !important;
+    z-index: 101;
+    width: 100%;
 }
-.video-js .vjs-tech {
+.h-about-top-TV{
+    position: relative;
+    padding: 0;
+    font-size: 10px;
+    vertical-align: middle;
+    font-weight: normal;
+    font-style: normal;
+    font-family: Arial, sans-serif;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.h-about-video{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 }
-#video-mask .closeBtn {
-    right: 0px;
-    top: 0;
-    margin-right: 2%;
-    margin-top: 2%;
-    position: absolute;
-    opacity: 1;
+.h-about-top{
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
     cursor: pointer;
-    width: 30px;
-    height: 30px;
+    height:600px;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    width: 100%;
 }
+.vjs-poster{
+    font-size: inherit;
+    width:74px;
+    height: 74px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    background: url('../img/h-img/h-play.png') no-repeat;
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+/*内容*/
+.h-about-cont{
+    width: 100%;
+    min-height: 2000px;
+    padding-bottom: 32px;
+    background-color: #ededed;
+    padding-top: 76px;
+}
+/*.h-about-cont-list{*/
+    /*width: 1170px;*/
+    /*min-height: 2000px;*/
+    /*background-color: #ffffff;*/
+    /*margin: 0 auto;*/
+/*}*/
+/*.h-about-cont-cont{*/
+    /*width: 49.2%;*/
+    /*height: 479px;*/
+    /*cursor: pointer;*/
+    /*float: left;*/
+    /*display: block;*/
+    /*padding: 4px;*/
+    /*margin-bottom: 20px;*/
+    /*line-height: 1.42857143;*/
+    /*background-color: #fff;*/
+    /*border: 1px solid #ddd;*/
+    /*border-radius: 4px;*/
+/*}*/
+/*.h-about-cont-cont:nth-child(2n-1){*/
+    /*padding-left: 0;*/
+    /*margin-right: 1.6%;*/
+/*}*/
+/*.h-about-cont-one{*/
+    /*margin-bottom: 20px;*/
+    /*position: relative;*/
+    /*font-size: 30px;*/
+    /*/!*padding: 15px;*!/*/
+    /*width: 100%;*/
+    /*height: 335px;*/
+    /*overflow: hidden;*/
+
+/*}*/
+/*.h-about-cont-one>img{*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*float: left;*/
+/*}*/
+/*.play-tv{*/
+    /*position: absolute;*/
+    /*z-index: 3;*/
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*margin-left: -35px;*/
+    /*margin-top: -35px;*/
+    /*cursor: pointer;*/
+    /*-webkit-border-radius: 50%;*/
+    /*-moz-border-radius: 50%;*/
+    /*border-radius: 50%;*/
+/*}*/
+/*.h-about-cont-text{*/
+    /*margin-bottom: 30px;*/
+/*}*/
 /*底部*/
 .h-footer{
-    width: 100%;
+    width: 1349px;
     height: 559px;
-    clear: both;
     background-color: #3a3a3a;
 }
 .h-footer-cont{
